# SerikBelediyesiWebSayfasi

./: .gitignore  CMakeLists.txt  CSSContainer.qrc  Necessary  README.md  SerikBelediyesiWebSayfasi.pro  backgroundanimation.cpp  backgroundanimation.h  main.cpp  mainapplication.cpp  mainapplication.h  mongoheaders.h
SerikBelediyesiWebSayfasi/BaseClass/: basewidget.cpp  basewidget.h  containerwiget.cpp  containerwiget.h  cssbuilder.cpp  cssbuilder.h  databasewidget.cpp  databasewidget.h  dbclass.cpp  dbclass.h  dialog.cpp  dialog.h  itembase.cpp  itembase.h  page.cpp  page.h  utility.cpp  utility.h  wtheaders.h
SerikBelediyesiWebSayfasi/Giris/: gelenmesajlarwidget.cpp  gelenmesajlarwidget.h
SerikBelediyesiWebSayfasi/baseItem/: tcitem.cpp  tcitem.h
SerikBelediyesiWebSayfasi/baseWidget/: tcitemwidget.cpp  tcitemwidget.h
SerikBelediyesiWebSayfasi/chart/: donut.cpp  donutchart.cpp  donutchart.h
SerikBelediyesiWebSayfasi/reporter/: reportresource.cpp  reportresource.h
SerikBelediyesiWebSayfasi/src/: anonswidget.cpp  anonswidget.h  basindabizwidget.cpp  basindabizwidget.h  body.cpp  body.h  footer.cpp  footer.h  giriswidget.cpp  giriswidget.h  header.cpp  header.h  yenilikler.cpp  yenilikler.h
SerikBelediyesiWebSayfasi/srcV2/: baskanwidget.cpp  baskanwidget.h  dilekceyonetim.cpp  dilekceyonetim.h  duyuruyonetim.cpp  duyuruyonetim.h  headerpage.cpp  headerpage.h  ik.cpp  ik.h  kadinailestock.cpp  kadinailestock.h  mainpage.cpp  mainpage.h  mainpagecontroller.cpp  mainpagecontroller.h  nostserik.cpp  nostserik.h  slider.cpp  slider.h
SerikBelediyesiWebSayfasi/srcV2/bilgiEdinmeBasvuru/: basvrulistitemwidget.cpp  basvrulistitemwidget.h  basvuruitemviewwidget.cpp  basvuruitemviewwidget.h  basvurularim.cpp  basvurularim.h  (+2 more)
SerikBelediyesiWebSayfasi/widget/: cssbuilder.cpp  cssbuilder.h  stylesheet.cpp  stylesheet.h
css/: CSSCustom.css  eventWidget.css  header.css  mainPage.css  nost.css  slider.css  style.css  v2.css
include/libmongoc-1.0/: mongoc-config.h
lib/: bson-1.0.lib  bson-static-1.0.lib  bsoncxx.lib  mongoc-1.0.lib  mongoc-static-1.0.lib  mongocxx.lib
lib/pkgconfig/: libbson-1.0.pc  libbson-static-1.0.pc  libbsoncxx.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongoc-static-1.0.pc  libmongocxx.pc
resource/: cssSource.qrc
resource/src/: button.css  button.css.map  button.scss  compileSASS.bat
(+125 files in other folders)
